# mgt

./: .gitignore  CMakeLists.txt
src/: h8.hpp  lexer.cpp  lexer.hpp  main.cpp  token.cpp  token.hpp  util.hpp
